<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:alpha="0"
        android:src="@drawable/image_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="100"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/create_your_account"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/tvNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:alpha="100"
        android:alpha="0"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAccount" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:alpha="0"
        android:background="@drawable/edt_style"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameTitle"
        tools:alpha="100"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        tools:alpha="100"
        android:alpha="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/edt_style"
        tools:alpha="100"
        android:alpha="0"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="16dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tvPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:alpha="100"
        android:alpha="0"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <com.example.submissiondicoding.customView.CustomEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edt_style"
        tools:alpha="100"
        android:alpha="0"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvPasswordTitle"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:text="@string/register"
        android:translationZ="0dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:alpha="100"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:alpha="100"
        android:alpha="0"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister">

        <TextView
            android:id="@+id/tvIsHaveAccount"
            android:layout_width="wrap_content"
            tools:alpha="100"
            android:alpha="0"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"/>

        <TextView
            android:id="@+id/tvToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login"
            android:textColor="#5E88B6"
            tools:alpha="100"
            android:alpha="0"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>