<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:alpha="0"
        android:foregroundGravity="center"
        android:src="@drawable/image_dicoding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="100"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/txtloginAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:text="@string/login_your_account"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <TextView
        android:id="@+id/tvEmailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtloginAccount"
        tools:alpha="100" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:alpha="0"
        android:background="@drawable/edt_style"
        android:maxLines="1"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailTitle"
        tools:alpha="100"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TextFields,VisualLintTextFieldSize" />


    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        tools:alpha="100" />

    <com.example.submissiondicoding.customView.CustomEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:alpha="0"
        android:background="@drawable/edt_style"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        tools:alpha="100"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:alpha="0"
        android:background="@drawable/bg_button"
        android:stateListAnimator="@animator/button_click_animator"
        android:text="@string/masuk"
        android:translationZ="0dp"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword"
        tools:alpha="100" />

    <LinearLayout
        android:id="@+id/layoutTextRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        tools:alpha="100">

        <TextView
            android:id="@+id/tvIsHaventAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/dont_have_account"
            tools:alpha="100" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/register"
            android:textColor="#5E88B6"
            android:textStyle="bold"
            tools:alpha="100"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>